--- a/AppBuscaCEP/AppBuscaCEP/AppBuscaCEP.csproj
+++ b/AppBuscaCEP/AppBuscaCEP/AppBuscaCEP.csproj
@@ -33,5 +33,8 @@
     <EmbeddedResource Update="View\CepPorLogradouro.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\EnderecoByCep.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
